--- a/only-buns/src/app/posts/post-feed/post-feed.component.css
+++ b/only-buns/src/app/posts/post-feed/post-feed.component.css
@@ -1,3 +1,9 @@
+p{
+  color: #333;
+  padding: 0;
+  margin: 0;
+}
+
 .post-container {
   max-width: 600px;
   margin: 20px auto;
@@ -12,6 +18,12 @@
   position: relative; 
 }
 
+.post-created{
+  font-size: 14px;
+  font-weight: lighter;
+  margin: 0;
+}
+
 .profile-image {
   width: 40px;
   height: 40px;
@@ -23,7 +35,6 @@
 
 .username {
   font-size: 1em;
-  color: #333;
   font-weight: bold;
   margin: 0;
 }
@@ -39,11 +50,12 @@
   display: flex;
   align-items: center; 
   gap: 10px; 
+  cursor: pointer;
 }
 
 .post-image img {
   width: 100%;
-  height: auto;
+  height: 100%;
 }
 
 .post-content {
@@ -54,18 +66,19 @@
 .post-likes {
   font-size: 0.9em;
   color: #777;
-  margin-bottom: 10px;
 }
 
 .post-description {
   font-size: 1em;
   color: #555;
+  margin-top: 10px;
   margin-bottom: 10px;
 }
 
 .view-comments {
   font-size: 0.9em;
-  color: var(--primary-color);
+  color: #777;
+  font-weight: lighter;
   text-decoration: none;
 }
 
