--- a/only-buns/src/app/posts/post-modal/post-modal.component.css
+++ b/only-buns/src/app/posts/post-modal/post-modal.component.css
@@ -54,6 +54,7 @@
   .modal-header {
     display: flex;
     align-items: center;
+    cursor: pointer;
   }
   
   .user-profile {
@@ -66,6 +67,16 @@
   .username {
     font-weight: bold;
     font-size: 16px;
+  }
+
+  .post-created{
+    font-size: 14px;
+    font-weight: lighter;
+    margin: 0;
+  }
+
+  .dot{
+    padding: 5px
   }
   
   .post-description {
@@ -94,6 +105,7 @@
     height: 40px;
     border-radius: 50%;
     margin-right: 10px;
+    cursor: pointer;
   }
   
   .comment-details {
@@ -105,6 +117,7 @@
     font-weight: bold;
     font-size: 14px;
     margin-bottom: 5px;
+    cursor: pointer;
   }
   
   .comment-text {
@@ -182,11 +195,11 @@
     width: 90%;
     max-width: 400px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    margin: 20px auto; /* Center the box horizontally */
+    margin: 20px auto; 
     display: flex;
-    justify-content: space-between; /* Space between text and close button */
-    align-items: center; /* Vertically center content */
-    text-align: left; /* Ensure the text aligns to the left */
+    justify-content: space-between; 
+    align-items: center; 
+    text-align: left; 
     position: relative;
   }
   
