fix: owner of post can't see the follow/unfollow option

--- a/only-buns/src/app/posts/post-feed/post-feed.component.html
+++ b/only-buns/src/app/posts/post-feed/post-feed.component.html
@@ -12,9 +12,9 @@
   
       <!-- Dropdown Menu -->
       <div class="dropdown-menu" *ngIf="showDropdown[post.id]">
-        <button class="dropdown-item" (click)="toggleFollowUser(post.userId)">
+        <button *ngIf="userId !== post.userId" class="dropdown-item" (click)="toggleFollowUser(post.userId)">
           {{ post.isFollowedByCurrentUser ? 'Unfollow' : 'Follow' }}
-        </button>        
+        </button>            
         <button *ngIf="userId === post.userId" class="dropdown-item" (click)="editPost(post.id)">Edit</button>
         <button *ngIf="userId === post.userId" class="dropdown-item" (click)="deletePost(post.id)">Delete</button>
         <button class="dropdown-item" (click)="closeDropdown(post.id)">Cancel</button>
