--- a/only-buns/src/app/posts/post-feed/post-feed.component.html
+++ b/only-buns/src/app/posts/post-feed/post-feed.component.html
@@ -13,7 +13,7 @@
       <!-- Dropdown Menu -->
       <div class="dropdown-menu" *ngIf="showDropdown[post.id]">
         <button *ngIf="userId !== post.userId" class="dropdown-item" (click)="toggleFollowUser(post.userId)">
-          {{ post.isFollowedByCurrentUser ? 'Unfollow' : 'Follow' }}
+          {{ post.isFollowedByCurrentUser ? 'Follow' : 'Unfollow' }}
         </button>            
         <button *ngIf="userId === post.userId" class="dropdown-item" (click)="editPost(post.id)">Edit</button>
         <button *ngIf="userId === post.userId" class="dropdown-item" (click)="deletePost(post.id)">Delete</button>
